--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -12,7 +12,7 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
@@ -22,6 +22,17 @@
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
   -->
+
+		<link href="http://cloud.webtype.com/css/6e73715c-096b-45fb-b313-901f8c344364.css" rel="stylesheet" type="text/css" />
+		
+		<style type="text/css" media="screen">
+			* {
+				font-family: "Neutraface2Text TT";
+				font-style: normal;
+				font-weight: normal;
+			}
+		</style>
+		
   </head>
 
   <body>
@@ -33,7 +44,7 @@
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2012 | served statically with <a href="http://jekyllrb.com">Jekyll</a></p>
+        <p>&copy; {{ site.author.name }} 2012</p>
       </footer>
 
     </div> <!-- /container -->
