--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,30 +1,20 @@
-<div class="page-header">
-  <h1>{% if page.link %}<a href="{{ page.link }}">{% endif %}{{ page.title }}{% if page.link %} ⥊</a>{% endif %}</h1>
-</div>
-
-<div class="row">
-  <div class="span8">
+<div class="post">
+  {% if page.link %}<h1><a href="{{ page.link }}">{{ page.title }}</a></h1><a href="{{ page.link }}"><p class="small"><em>{{ page.link }}→</em></p></a>{% else %}<h1><a href="{{ page.url }}">{{ page.title }}</a></h1>{% endif %}
     {{ content }}
-    <hr>
+		<h4><em>posted {{ page.date | date: "%A, %B %d, %Y" }}</em></h4>
     <div class="pagination">
       <ul>
       {% if page.previous %}
-        <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
+        <li><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
       {% else %}
-        <li class="prev disabled"><a>&larr; Previous</a></li>
+        <li class="disabled"><a>&larr; Previous</a></li>
       {% endif %}
-        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Home</a></li>
+        <li><a href="/">Home</a></li>
       {% if page.next %}
-        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
+        <li><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
       {% else %}
-        <li class="next disabled"><a>Next &rarr;</a>
+        <li class="disabled"><a>Next &rarr;</a>
       {% endif %}
       </ul>
     </div>
-    <hr>
-  </div>
-  
-  <div class="span4">
-    <h4>Posted {{ page.date | date: "%A, %B %d, %Y" }}</h4>
-  </div>
 </div>
