Added rss feed and twitter name

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -26,10 +26,16 @@
   -->
 
 		<link href="http://cloud.webtype.com/css/6e73715c-096b-45fb-b313-901f8c344364.css" rel="stylesheet" type="text/css" />
+		
+		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
   </head>
 
   <body>
+	
+	<aside class="twitter">
+		<a href="http://twitter.com/zachphillips">@zachphillips</a>
+	</aside>
 
     <div class="container">
 
@@ -38,7 +44,7 @@
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2012</p>
+        <p>&copy; <a href="http://twitter.com/zachphillips">{{ site.author.name }}</a> 2012</p>
       </footer>
 
     </div> <!-- /container -->
