--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -25,6 +25,35 @@ h1 {
 	margin:0 0 30px 0;
 }
 
+aside.twitter {
+	margin-bottom:-10px;
+	text-align:left;
+}
+
+aside.twitter a {
+	font-size:12px;
+}
+
+@media all and (min-width: 481px) {
+	aside.twitter {
+		position:fixed;
+		right:0;
+		top:55px;
+	}
+
+	aside.twitter a {
+		font-size:16px;
+		padding:0;
+		display:block;
+		margin-right:-28px;
+		-webkit-transform: rotate(-90deg);
+		-moz-transform: rotate(-90deg);
+		-ms-transform: rotate(-90deg);
+		-o-transform: rotate(-90deg);
+		transform: rotate(-90deg);
+	}
+}
+
 p.small {
 	margin:-30px 0 30px 0;
 }
@@ -92,8 +121,15 @@ div.pagination ul li {
 }
 
 div.pagination ul li.prev {
-	width:34%;
-	margin-left:-15px;
+	width:35%;
+	margin-left:-25px;
+	margin-right:4%;
+}
+
+@media all and (min-width: 481px) {
+	div.pagination ul li.prev {
+		margin-right:0;
+	}
 }
 
 .navbar {
