--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -6,6 +6,8 @@
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
 
+		<link rel="alternate" type="application/atom+xml" href="/index.xml">
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
