--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -6,7 +6,7 @@
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
 
-		<link rel="alternate" type="application/atom+xml" href="/index.xml">
+		<link rel="alternate" type="application/rss+xml" href="/index.xml">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
