--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -22,7 +22,29 @@ p {
 }
 
 h1 {
+	font-size:26px;
 	margin:0 0 30px 0;
+}
+
+h4 {
+	font-size:.7em;
+	margin-bottom:0;
+}
+
+iframe {
+	width:100%;
+	height:210px;
+}
+
+blockquote {
+	margin-right:0;
+	margin-left:15px;
+	margin-bottom:20px;
+}
+
+blockquote p {
+	font-size:.9em;
+	font-style:italic;
 }
 
 aside.twitter {
@@ -35,6 +57,14 @@ aside.twitter a {
 }
 
 @media all and (min-width: 481px) {
+	h1 {
+		font-size:2em;
+	}
+	
+	iframe {
+		height:320px;
+	}
+	
 	aside.twitter {
 		position:fixed;
 		right:0;
@@ -52,10 +82,17 @@ aside.twitter a {
 		-o-transform: rotate(-90deg);
 		transform: rotate(-90deg);
 	}
+	
+	blockquote {
+		margin-left:30px;
+		padding-right:60px;
+	}
 }
 
 p.small {
 	margin:-30px 0 30px 0;
+	word-wrap: break-word;
+	font-size:.9em;
 }
 
 h1, h2, h3, h4, h5 {
@@ -66,17 +103,6 @@ h1, h2, h3, h4, h5 {
 
 img {
 	max-width:100%;
-}
-
-blockquote {
-	margin-left:20px;
-	padding-left:10px;
-	margin-bottom:20px;
-}
-
-blockquote p {
-	font-size:.9em;
-	font-style:italic;
 }
 
 pre {
@@ -103,6 +129,11 @@ div.post {
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
      -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
           box-shadow: 0 1px 2px rgba(0,0,0,.15);
+}
+
+div.pagination {
+	max-width:600px;
+	margin:0 auto;
 }
 
 div.pagination ul {
