Added home button to top left, where it should be

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -33,6 +33,10 @@
 
   <body>
 	
+	<aside class="gohome">
+		<a href="/">☗</a>
+	</aside>
+	
 	<aside class="twitter">
 		<a href="http://twitter.com/zachphillips">@zachphillips</a>
 	</aside>
